fix: scroll lag on mobile devices

--- a/rushdynamic/src/app/globals.css
+++ b/rushdynamic/src/app/globals.css
@@ -8,14 +8,27 @@
 	/* background-image: url(/images/noise.svg); */
 	/* background-image: linear-gradient(to top, #f6e7e1 0%, #f2f2f2 30%);
 	background-repeat: repeat; */
+	/* background-size: 400% 400%;
+	animation: gradient 15s ease infinite; */
+	overflow: hidden;
+	position: relative;
+}
+
+.custom-bg::before {
+	content: ' ';
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
 	background: url(/images/noise.svg),
-		linear-gradient(to top left, #faad17, transparent),
-		linear-gradient(to top right, #d2c9a0, transparent),
+		/* linear-gradient(to top left, #faad17, transparent),*/
+			linear-gradient(to top right, #d2c9a0, transparent),
 		linear-gradient(to top, transparent, #f2f2f2 100%);
 	background-blend-mode: overlay, screen, screen;
 	background-attachment: fixed;
-	/* background-size: 400% 400%;
-	animation: gradient 15s ease infinite; */
+	will-change: transform;
+	z-index: -1;
 }
 
 @keyframes gradient {
